--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RDXN199CJ9"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-RDXN199CJ9');
+    </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
@@ -16,7 +25,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Unraveling RoPE: How LLMs See Position" />
     <meta property="og:description" content="Interactive exploration of the geometry and mathematics of RoPE in modern Large Language Models." />
-    <meta property="og:image" content="https://www.imagepaceholderxdxd.com" />
+    <meta property="og:image" content="https://github.com/JPeggysus/RoPE/blob/main/image.jpg?raw=true" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:site_name" content="Unraveling RoPE" />
 
@@ -24,7 +33,7 @@
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:title" content="Unraveling RoPE: How LLMs See Position" />
     <meta property="twitter:description" content="Interactive visualization explaining the geometry and mathematics of RoPE in modern Large Language Models." />
-    <meta property="twitter:image" content="https://www.imagepaceholderxdxd.com" />
+    <meta property="twitter:image" content="https://github.com/JPeggysus/RoPE/blob/main/image.jpg?raw=true" />
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
